fix: tjstar banner styling on mobile

--- a/intranet/static/css/tjstar_ribbon.scss
+++ b/intranet/static/css/tjstar_ribbon.scss
@@ -5,6 +5,9 @@
     padding: 1rem;
     border: 1px solid #e3e3e3;
     margin-bottom: 6px;
+    @media (max-width: 992px) {
+      margin-top: 40px;
+    }
 }
 
 .tjstar-ribbon-toggle {
@@ -14,6 +17,9 @@
     margin-bottom: 6px;
     padding-left: 1rem;
     cursor: pointer;
+    @media (max-width: 992px) {
+      margin-top: 40px;
+    }
 }
 
 .tjstar-ribbon-toggle-text {
